fixed carousel height and letter spacing

--- a/app/assets/stylesheets/carousel.css.scss
+++ b/app/assets/stylesheets/carousel.css.scss
@@ -1,6 +1,9 @@
+@import "bootstrap/variables";
+@import "bootstrap/mixins";
 /* GLOBAL STYLES
 -------------------------------------------------- */
 /* Padding below the footer and lighter body text */
+$carousel-height: 600px;
 
 body {
   color: #5a5a5a;
@@ -36,7 +39,7 @@ body {
 
 /* Carousel base class */
 .carousel {
-  height: 552px;
+  height: ($carousel-height - 2);
   border-bottom: 2px #454343 solid;
 }
 /* Since positioning the image, we need to help out the caption */
@@ -46,7 +49,7 @@ body {
 
 /* Declare heights because of positioning of img element */
 .carousel .item {
-  height: 550px;
+  height: $carousel-height;
   background-color: #777;
 }
 
@@ -75,7 +78,7 @@ body {
   top: 0;
   left: 0;
   min-width: 100%;
-  height: 550px;
+  height: $carousel-height;
   margin-top: 65px;
 }
 
@@ -169,6 +172,7 @@ div.featurette {
   div.carousel-caption h1 {
     font-weight: 700; 
     font-size: 40px;
+    margin-bottom: 5px;
   }
   /* Bump up size of carousel content */
   .carousel-caption p {
